--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather App</title>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- custom css -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="search"></div>
+    <div class="card">
+      <div class="search">
+        <input type="text" />
+        <button><img src="./images/search.png" alt="search" /></button>
+      </div>
+    </div>
     <script src="./js/script.js"></script>
   </body>
 </html>
