--- a/index.html
+++ b/index.html
@@ -17,8 +17,29 @@
   <body>
     <div class="card">
       <div class="search">
-        <input type="text" />
+        <input type="text" placeholder="enter city name" />
         <button><img src="./images/search.png" alt="search" /></button>
+      </div>
+      <div class="weather">
+        <img src="./images/rain.png" alt="rain" class="weather-icon" />
+        <h1>28°C</h1>
+        <h2>New York</h2>
+        <div class="details">
+          <div class="col">
+            <img src="./images/humidity.png" alt="humidity" />
+            <div>
+              <p class="humidity">50%</p>
+              <p>Humidity</p>
+            </div>
+          </div>
+          <div class="col">
+            <img src="./images/wind.png" alt="wind" />
+            <div>
+              <p class="wind">15km/h</p>
+              <p>Wind Speed</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="./js/script.js"></script>
