--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </div>
       <div class="weather">
         <img src="./images/rain.png" alt="rain" class="weather-icon" />
-        <h1>28°C</h1>
-        <h2>New York</h2>
+        <h1 class="temp">28°C</h1>
+        <h2 class="city">New York</h2>
         <div class="details">
           <div class="col">
             <img src="./images/humidity.png" alt="humidity" />
